--- a/gb/20/7/14/n12254635.md
+++ b/gb/20/7/14/n12254635.md
@@ -1,35 +1,35 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qeleqz3066/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qeleqz3066/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qeleqz3066/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qeleqz3066/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>上半年 至少5313名法轮功学员被绑架骚扰</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-4-600x400.png" />
 <h6>2020年1～6月中国大陆各地法轮功学员遭绑架骚扰人次统计示意图。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2020年07月14日讯】2020年上半年，中共警察在全国范围内28个省、自治区、直辖市的238个城市抓捕<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>法轮功学员5,313人。</p>
-<p>明慧网报导，其中，<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>2,654人（1,408人已经回家，2人走脱）、<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>2,659人、强制送洗脑班77人、抄家1,687人、流离失所48人。</p>
+	<p>【大纪元2020年07月14日讯】2020年上半年，中共警察在全国范围内28个省、自治区、直辖市的238个城市抓捕<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>法轮功学员5,313人。</p>
+<p>明慧网报导，其中，<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>2,654人（1,408人已经回家，2人走脱）、<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>2,659人、强制送洗脑班77人、抄家1,687人、流离失所48人。</p>
 <p>他们中有局长、教育界的专家、大学教授、计算机博士、老师、工程师、医院院长、医生、团级退伍军人、会计、银行干部、个体老板等各界精英人士。其中教育界的大学教授、小学老师、中学老师有48名。</p>
-<figure id="attachment_12254660" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-3.png"><img class="size-large wp-image-12254660" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-3-600x428.png" alt="" width="600" b="428" /></a><figcaption class="wp-caption-text">2020年1～6月大陆法轮功学员遭中共<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>、骚扰人次统计示意图。（示意图）</figcaption></figure>
-<p>上半年，中共对法轮功学员非法判刑132人、庭审100场、批捕66人，构陷到检察院、法院388人。上半年，38名法轮功学员被迫害离世，有15人是在监狱、看守所、派出所非法关押中<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>的。</p>
+<figure id="attachment_12254660" aria-describedby="caption-attachment-12254660" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-3.png"><img class="size-large wp-image-12254660" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-3-600x428.png" alt="" width="600" b="428" /></a><figcaption id="caption-attachment-12254660" class="wp-caption-text">2020年1～6月大陆法轮功学员遭中共<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>、骚扰人次统计示意图。（示意图）</figcaption></figure>
+<p>上半年，中共对法轮功学员非法判刑132人、庭审100场、批捕66人，构陷到检察院、法院388人。上半年，38名法轮功学员被迫害离世，有15人是在监狱、看守所、派出所非法关押中<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>的。</p>
 <p>上半年，中共非法抓捕骚扰65岁以上的老年法轮功学员540人，其中90岁以上6人、80～90岁140人、70～80岁278人、65～70岁116人。他们中被绑架的有356人，年龄最长者90岁；骚扰184人，年龄最长者92岁。</p>
 <p>中共公检法敲诈勒索法轮功学员的现金2,862,994元，其中，警察抄家、敲诈勒索2,477,994元，法院罚金385,000元。</p>
-<figure id="attachment_12254668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-2.png"><img class="size-large wp-image-12254668" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-2-600x429.png" alt="" width="600" b="429" /></a><figcaption class="wp-caption-text">2020年1～6月540名65岁以上的老年法轮功学员遭绑架骚扰。（明慧网）</figcaption></figure>
-<h2><b>唐山市36人被绑架 <ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E9%9F%A9%E7%8E%89%E8%8A%B9.md#1">韩玉芹</a>当天<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a></b></h2>
-<p>6月18日早上4点多钟，唐山市丰润区公安分局及派出所出动大批警察到该区的三十多名法轮功学员家中实施绑架、非法抄家、恐吓。68岁的法轮功学员<ahref="https://github.com/qeleqz3066/djy/blob/master/gb/tag/%E9%9F%A9%E7%8E%89%E8%8A%B9.md#1">韩玉芹</a>当天在端明路派出所被迫害致死。</p>
+<figure id="attachment_12254668" aria-describedby="caption-attachment-12254668" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-2.png"><img class="size-large wp-image-12254668" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-mh-persecution-arrest-2-600x429.png" alt="" width="600" b="429" /></a><figcaption id="caption-attachment-12254668" class="wp-caption-text">2020年1～6月540名65岁以上的老年法轮功学员遭绑架骚扰。（明慧网）</figcaption></figure>
+<h2><b>唐山市36人被绑架 <ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%9F%A9%E7%8E%89%E8%8A%B9.md#1">韩玉芹</a>当天<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a></b></h2>
+<p>6月18日早上4点多钟，唐山市丰润区公安分局及派出所出动大批警察到该区的三十多名法轮功学员家中实施绑架、非法抄家、恐吓。68岁的法轮功学员<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%9F%A9%E7%8E%89%E8%8A%B9.md#1">韩玉芹</a>当天在端明路派出所被迫害致死。</p>
 <p>当天下午6点多钟，韩玉芹的家属在丰润区中医院见到了遗体，看到韩玉芹头发蓬乱、鼻中有血迹，家人痛哭。悲愤的家属要求派出所警察穿上制服给死者行礼。在家属的强烈要求下，出来一个自称是所长的人穿上警服在韩玉芹的遗体前鞠躬行礼，并说：“大姨对不起。”</p>
 <p>韩玉芹老人被劫持到端明路派出所后，被强制坐在铁椅子上。警察让她填表放弃修炼，被她拒绝。她女儿赶到派出所，被禁止见她。</p>
 <p>当天中午，韩玉芹的丈夫去给她送饭，她没吃，一直在哭。由于长时间坐铁椅子，她的腿已发肿。下午她上厕所时晕倒在里面，随后她被送至医院抢救，不治身亡。</p>
 <h2><b>夏明金被诬判两年回家后仍遭骚扰</b></h2>
 <p>夏明金，55岁，家住江西省南昌市青云谱区，因为坚持修炼法轮功，曾被非法劳教1年、非法拘留15天；2019年10月，被非法判刑2年；2020年4月3日，被释放回家后，至今还遭到青云谱区公安分局国保大队、岱山派出所片警、岱山司法所及施尧村社区等人员的骚扰。</p>
-<figure id="attachment_12254733" style="width: 200px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_08.jpg"><img class="size-full wp-image-12254733" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_08.jpg" alt="" width="200" b="267" /></a><figcaption class="wp-caption-text">迫害前的夏明金。（明慧网）</figcaption></figure>
-<figure id="attachment_12254734" style="width: 200px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_09.jpg"><img class="size-full wp-image-12254734" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_09.jpg" alt="" width="200" b="259" /></a><figcaption class="wp-caption-text">被关押迫害中的夏明金。（明慧网）</figcaption></figure>
+<figure id="attachment_12254733" aria-describedby="caption-attachment-12254733" style="width: 200px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_08.jpg"><img class="size-full wp-image-12254733" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_08.jpg" alt="" width="200" b="267" /></a><figcaption id="caption-attachment-12254733" class="wp-caption-text">迫害前的夏明金。（明慧网）</figcaption></figure>
+<figure id="attachment_12254734" aria-describedby="caption-attachment-12254734" style="width: 200px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_09.jpg"><img class="size-full wp-image-12254734" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_09.jpg" alt="" width="200" b="259" /></a><figcaption id="caption-attachment-12254734" class="wp-caption-text">被关押迫害中的夏明金。（明慧网）</figcaption></figure>
 <p>2018年4月3日晚，夏明金在外出悬挂法轮功真相条幅时，遭南昌市青山湖区公安分局暴力绑架，后被判刑2年。</p>
 <p>2020年4月3日，夏明金两年刑满，从南昌市第一看守所被释放回家。家人看到昔日漂亮开朗、身材挺拔的她变得满头白发、衰老憔悴、身形萎缩、神情呆板……</p>
 <p>回家后至今，夏明金一直遭到户籍所在地岱山派出所片警刘辰科的持续骚扰。此人不仅要求她每月必须到派出所报到、录指纹，还要写所谓的“思想汇报”，甚至还荒唐地要求她上报自己脚上所穿鞋子的尺码。在她拒绝这些违法的无理要求后，青云谱区公安分局国保大队涂姓大队长就打电话对她丈夫施加压力。</p>
 <h2><b>刘永英遭殴打 被开除公职</b></h2>
 <p>2018年4月3日，南昌市法轮功学员、江西省民政学校高级讲师刘永英（曾经遭冤狱迫害累计5年）再次被南昌市青山湖区公安分局绑架，后被非法判刑2年；2020年4月3日，刑满回家，目前已被开除公职、剥夺了退休金。</p>
-<figure id="attachment_12254772" style="width: 266px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_10.jpg"><img class=" wp-image-12254772" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_10.jpg" alt="" width="266" b="204" /></a><figcaption class="wp-caption-text">被迫害之前的刘永英。（明慧网）</figcaption></figure>
-<figure id="attachment_12254774" style="width: 170px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_11.jpg"><img class="size-full wp-image-12254774" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_11.jpg" alt="" width="170" b="140" /></a><figcaption class="wp-caption-text">遭迫害后的刘永英。（明慧网）</figcaption></figure>
+<figure id="attachment_12254772" aria-describedby="caption-attachment-12254772" style="width: 266px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_10.jpg"><img class=" wp-image-12254772" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_10.jpg" alt="" width="266" b="204" /></a><figcaption id="caption-attachment-12254772" class="wp-caption-text">被迫害之前的刘永英。（明慧网）</figcaption></figure>
+<figure id="attachment_12254774" aria-describedby="caption-attachment-12254774" style="width: 170px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_11.jpg"><img class="size-full wp-image-12254774" src="https://i.epochtimes.com/assets/uploads/2020/07/2020-7-13-i092049_11.jpg" alt="" width="170" b="140" /></a><figcaption id="caption-attachment-12254774" class="wp-caption-text">遭迫害后的刘永英。（明慧网）</figcaption></figure>
 <p>4月中旬，她被区社保局告知，交满15年大约120,000元的全部金额后，才可以领取每月大约1,000元的退休金。</p>
 <p>刘永英为了坚持修炼法轮功，在单位被撤掉高级讲师岗位、工资降三级，前后经历了总计7年的冤狱迫害，2018年被开除公职，如今又被剥夺了退休金。</p>
 <h2><b>西南医科大学扣押老教授退休金9年</b></h2>
@@ -55,36 +55,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/3/15/n11941295.md#1">2月份 中共至少绑架282名法轮功学员</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/3/29/n11986358.md#1">大疫下 政法委下令迫害法轮功 骚扰绑架多人</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/5/5/n12085058.md#1">近两月 吉林榆树众多法轮功学员遭绑架骚扰</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/15/n11941295.md#1">2月份 中共至少绑架282名法轮功学员</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/29/n11986358.md#1">大疫下 政法委下令迫害法轮功 骚扰绑架多人</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/5/5/n12085058.md#1">近两月 吉林榆树众多法轮功学员遭绑架骚扰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a target="_blank" href="https://github.com/qeleqz3066/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883126.md#1" target="_blank">“1400例”闹剧出笼记</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12250828.md#1">触目惊心 中储粮直属库再曝“硕鼠”事件</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12251066.md#1">东莞海滩惊现上万猪脚和内脏 遍布海岸线</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12250760.md#1">班农：多名中国病毒专家出逃 真相会惊世人</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12252931.md#1">中共宣称制裁四位美国政要 卢比奥回应</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12251145.md#1">纳瓦罗：美将对微信和TikTok采取强有力行动</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12250927.md#1">中共广电总局新增20条禁令 杜汶泽发文嘲讽</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12252432.md#1">妻乳癌逝享年57岁 约翰?屈伏塔发文悼念</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12251164.md#1">林志玲登台北电影奖 事先不透风获赞超暖心</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12250791.md#1">无惧恶法吁市民投票 叶德娴：港人心未死</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12253192.md#1">曾志伟抖音直播卖货 货不对版遭网友投诉</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/5/20/n12122697.md#1">高鹗补红楼之年龄错谬及深度削弱</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/5/28/n12144105.md#1">【康熙大帝】毕生治河 天下安澜二十载</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/12/n12249941.md#1">中国第一坝三门峡大坝悲歌 为何坝成即祸出？</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/7/13/n12252460.md#1">海拔二千多公尺 世界最危险教堂盖在峭壁上</a></li>
-<li><a href="https://github.com/qeleqz3066/djy/blob/master/gb/20/6/29/n12219238.md#1">世界仅存的马毛编织工艺</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qeleqz3066/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qeleqz3066/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/14/n12254635.htm">上半年 至少5313名法轮功学员被绑架骚扰</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/14/n12254635.htm">上半年 至少5313名法轮功学员被绑架骚扰</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qeleqz3066/djy/blob/master/gb/20/7/14/n12254635.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qeleqz3066/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qeleqz3066/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qeleqz3066/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qeleqz3066/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/20/7/14/n12254635.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
